Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-35079

Problems with multiple vxattrs

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 6.5.0
    • 5.5.0, 5.5.1, 5.5.2, 5.5.3, 5.5.4, 5.5.5, 6.0.0, 6.0.1, 6.0.2, 6.5.0
    • memcached
    • None
    • Untriaged
    • Unknown

    Description

      If the client tries to fetch a mix of multiple virtual xattrs it might not work as expected.  Ex:

      $document
      _sync 

      will work, but

      _sync
      $document 

      will not work. In addition

      $XTOC
      _sync

      returns "null" for the toc

       

      NOTE: that the release notes for xattrs specified that only one xattr may be used at any time, but the validators and the implementation allowed for a mix of virtual and a single key.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              trond Trond Norbye
              trond Trond Norbye
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty