MB-35079: Allow mix of multiple virtual xattrs

It should be possible to mix the order of the virtual xattrs
(and request multiple of them)

Change-Id: I2473d8151053c15b6fe1c8f0fef2455657031ca5
Reviewed-on: http://review.couchbase.org/111996
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Trond Norbye <trond.norbye@couchbase.com>